[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/Characters/Trehy/Trehy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead00.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead01.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead02.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead03.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead04.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead05.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead06.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead07.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead08.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Dead/sprTretyDead09.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Idle/sprTrehy00.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy01.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy02.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy03.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy04.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy05.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy06.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy07.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy08.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy09.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Characters/Trehy/Trehy/Run/sprTrehy10.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Objets/DangerZone/DanguerZone.tscn" type="PackedScene" id=23]
[ext_resource path="res://Sprites/Objets/Pixel.png" type="Texture" id=24]
























[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "Dead",
"speed": 16.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 16.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
width = 2045
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
trail_size_modifier = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
spread = 8.0
flatness = 1.0
gravity = Vector3( 100, 0, 0 )
initial_velocity = 8.0
initial_velocity_random = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 1.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
scale_random = 1.0
anim_speed = 1.0

[node name="Trehy" type="KinematicBody2D"]
collision_layer = 2
collision/safe_margin = 0.07
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="DanguerZone" parent="." instance=ExtResource( 23 )]
visible = false
position = Vector2( 2.38419e-007, 2 )
scale = Vector2( 0.125, 0.375 )

[node name="Fall" type="RayCast2D" parent="."]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Look" type="RayCast2D" parent="."]
position = Vector2( 7, -5 )
enabled = true
cast_to = Vector2( -80, 0 )
collision_mask = 5

[node name="DeadParticles" type="Particles2D" parent="."]
modulate = Color( 0.855469, 0.840718, 0.477859, 1 )
emitting = false
amount = 10
lifetime = 0.9
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 1000
visibility_rect = Rect2( 0, 0, 0, 0 )
draw_order = 1
process_material = SubResource( 5 )
texture = ExtResource( 24 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -20, -20, 40, 40 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
